[gd_scene load_steps=5 format=3 uid="uid://cxql551tfm044"]

[ext_resource type="Script" uid="uid://bq31q7jsrhiut" path="res://scripts/cactus.gd" id="1_3uwn4"]
[ext_resource type="Texture2D" uid="uid://cu422cxovac07" path="res://media/cactus.png" id="2_3uwn4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
radius = 6.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3uwn4"]
radius = 80.0

[node name="Cactus" type="Area2D" groups=["hurts_player", "player_targets"]]
script = ExtResource("1_3uwn4")
health = 20
score_val = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_md0e3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3uwn4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.5, 2.38419e-07)
scale = Vector2(1.15, 1.6)
rect = Rect2(-30, -30, 60, 60)

[node name="Range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_3uwn4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
